...
        trailing: SizedBox(
          width: screenSize.width * 0.25,
          child: ElevatedButton(
            key: Key('join-tournament-${tournament['id']}'),
            onPressed: canJoin ? () => _showJoinTournamentDialog(tournament) : null,
            child: Text(
              key: canJoin ? Key('join-tournament-text') : Key('closed-tournament-text'),
              canJoin ? AppLocalizations.of(context)!.joinButton : AppLocalizations.of(context)!.closedButton
            ),
          ),
        ),
      ),
    );
...
        actions: [
          TextButton(
            onPressed: () => Navigator.pop(context),
            child: Text(AppLocalizations.of(context)!.cancel),
          ),
          ElevatedButton(
            key: Key('confirm-create-tournament'),
            onPressed: () {
              if (_formKey.currentState!.validate()) {
                _handleCreateTournament(
                  nameController.text,
                  passwordController.text,
                  prizeController.text,
...
        ),
        content: Column(
          mainAxisSize: MainAxisSize.min,
          children: [
            if(hasPassword)
              TextField(
                key: Key('join-tournament-password'),
                controller: passwordController,
                obscureText: true,
                decoration: InputDecoration(
                  labelText: AppLocalizations.of(context)!.password,
                  border: OutlineInputBorder(),
                ),
...
        actions: [
          TextButton(
            onPressed: () => Navigator.pop(context),
            child: Text(AppLocalizations.of(context)!.cancel),
          ),
          ElevatedButton(
            key: Key('confirm-join-tournament'),
            onPressed: () => _handleJoinTournament(
              tournament['id'], 
              passwordController.text
            ),
            child: Text(AppLocalizations.of(context)!.joinButton),
          ),
...
                  Padding(
                    padding: EdgeInsets.symmetric(horizontal: screenSize.width * 0.06),
                    child: Row(
                      children: [
                        Expanded(
                          child: ElevatedButton.icon(
                            key: Key('create-tournament-button'),
                            icon: Icon(
                              Icons.add,
                              size: screenSize.height * 0.02,
                              color: theme.colorScheme.onPrimary),
                            label: Text(
                              AppLocalizations.of(context)!.createTournament,
...
