...
    "tournamentStartedError": "Error al iniciar el torneo",
    "tournamentLeaveSuccess": "Has abandonado el torneo con éxito",
    "tournamentLeaveError": "Error al abandonar el torneo",

    "tournamentsTitle": "Torneos",
    "createTournament": "Crear",
    "globalTournaments": "Global",
    "tournamentName": "Nombre del torneo",
    "optionalPassword": "Contraseña (opcional)",
    "prize": "Premio",
    "description": "Descripción",
    "defaultDescription": "El mejor torneo",
    "joinTournamentTitle": "Unirse a un torneo",
    "confirmJoin": "Confirmar",
    "createTournamentTitle": "Crear torneo",
    "tournamentCreated": "Torneo creado",
    "invalidNameError": "Nombre inválido (3-20 caracteres)",
    "invalidPrizeError": "Premio inválido (Número)",
    "invalidDescriptionError": "Descripción no válida",
    "activeTournamentsEmpty": "No hay torneos activos",
    "participantsCount": "participantes",
    "joinButton": "Unirse",
    "closedButton": "Cerrado",
    "statusOpen": "Abierto",
    "statusInProgress": "En progreso",
    "statusFinished": "Terminado",
    "loadTournamentsError": "Error al cargar torneos:",
    "accessTournamentError": "Error al acceder al torneo:",
    "cant_play_while_tournament": "No puede jugar partidas mientras estas en torneo",

    "requiredField": "Este campo es obligatorio",
    "minChars": "Mínimo 3 caracteres",
    "maxNameChars": "Máximo 20 caracteres",
    "maxPasswordChars": "Máximo 100 caracteres",
    "validNumber": "Debe ser un número válido",
    "invalidChars": "Caracteres inválidos",
    "err_sign_out": "Error al cerrar sesión",
...
