...
      icon = const Icon(Icons.info, color: Colors.white);
      break;
  }

  late final Flushbar flush;
  flush = Flushbar(
    key: Key('snack-bar'),
    message: message,
    icon: icon,
    backgroundColor: backgroundColor,
    margin: const EdgeInsets.all(8.0),
    borderRadius: BorderRadius.circular(8.0),
    flushbarPosition: FlushbarPosition.TOP,
...
